removed mock injection on species